force-app/main/default/objects/PackingSlipTemplateDefault__mdt/PackingSlipTemplateDefault__mdt.object-meta.xml
<CustomObject>
	<description>Packaged default templates for the packing slip rendering framework.</description>
	<label>Packing Slip Template</label>
	<pluralLabel>Packing Slip Templates</pluralLabel>
</CustomObject>