force-app/main/default/objects/PackingSlipTemplateDefault__mdt/fields/Body__c.field-meta.xml
<CustomField>
	<fullName>Body__c</fullName>
	<label>Body</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>