force-app/main/default/objects/PackingSlipTemplateDefault__mdt/fields/Output_Mode__c.field-meta.xml
<CustomField>
	<fullName>Output_Mode__c</fullName>
	<label>Output Mode</label>
	<required>true</required>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>SCREEN</fullName>
				<default>true</default>
				<label>Screen</label>
			</value>
			<value>
				<fullName>PRINT</fullName>
				<label>Print</label>
			</value>
			<value>
				<fullName>PDF</fullName>
			</value>
			<value>
				<fullName>ZPL</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>