force-app/main/default/objects/PackingSlipTemplateDefault__mdt/fields/Template_Type__c.field-meta.xml
<CustomField>
	<fullName>Template_Type__c</fullName>
	<label>Template Type</label>
	<required>true</required>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>HTML</fullName>
				<default>true</default>
				<label>HTML</label>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>